--- a/3rozdzial2.tex
+++ b/3rozdzial2.tex
@@ -10,7 +10,7 @@ What is a depth map. Classification of aqcuisition methods - passive and active,
 
 The manipulation and movement tasks of a MMS robot involves continuous interaction with unstructured and changing environment. In order to develop an autonomous system, which will be able to operate in such conditions, a data acquisition system is required, that would provide the necessary information about the nearby objects surface, size and relative distances. The measurement of this type can be performed by using depth acquisition techniques, also known as three dimensional (3D) imaging.
 
-The first depth acquisition techniques emerged as a replacement for a contact-based coordinate measuring machines (CMM). CMMs were used in the industrial quality control applications and worked by recording the displacement of a probe tip sliding across a solid surface. Such method was time consuming and inadequate for fragile objects. Modern, contact-less 3D scanning apparatus overcome those limitations by using light to interact with the environment. The new technology had also extended the application area of 3D scanning to the field of robotic perception.
+The first depth acquisition techniques emerged as a replacement for a contact-based coordinate measuring machines (CMM). CMMs were used in the industrial quality control applications and worked by recording the displacement of a probe tip sliding across a solid surface. Such method was time consuming and inadequate for fragile objects. Modern, contact-less 3D scanning apparatus overcome those limitations by using light to interact with the environment. The new technology has also extended the application area of 3D scanning to the field of robotic perception.
 
 Modern methods of 3D data acquisition are classified by the light source they utilize to measure depth. \textit{Passive} techniques rely only on the ambient light, whereas the \textit{active} ones operate by projecting illumination onto an object and recording the reflected beam. In the following sections, examples of both categories are presented, with a brief description of their principles of operation and a discussion of advantages and disadvantages, finalized by hardware selection for the designed MMS robot.
 
@@ -34,8 +34,8 @@ The correspondence problem is the most difficult part of the stereo vision. It c
 \begin{figure}[H]
 \label{fig:stereo}
 \centering
-\includegraphics[width=0.7\textwidth]{fig/stereovision}
-\caption{Typical Stereo Vision System}
+\includegraphics[width=0.5\textwidth]{fig/nistereovision}
+\caption{A simplified stereo vision system \cite{nistereo}}
 \label{fig:stereovision}
 \end{figure}
 
@@ -111,7 +111,7 @@ ToF cameras, due to their specific architecture, are prone to errors caused by r
 \label{fig:tof}
 \centering
 \includegraphics[width=0.7\textwidth]{fig/tofprinciple}
-\caption{Continuous-Wave Time of Flight principle \cite{ToFbook}}
+\caption{Time of flight with continuous wave modulation \cite{ToFbook}}
 \label{fig:tofprinciple}
 \end{figure}
 
