--- a/6summary.tex
+++ b/6summary.tex
@@ -3,22 +3,8 @@
 \markboth{Summary}{Summary}
 \addcontentsline{toc}{chapter}{Summary}  
 
-%---------------------------------------------------------------------------
+The aim of this study was to design a robotic research platform and attempt to implement an autonomous operating mode based on the depth data analysis. As a result, a fully operational, mobile robot with a set of two serial manipulators was created. The implemented system is able to independently move among obstacles and gives the possibility of recognizing simple shaped objects. This work presents the design process of the robot, surveys some of the modern depth data acquisition techniques, provides an introduction to the methods of 3D image processing and, finally, describes the synthesis of the autonomous operation mode for the task of searching for predefined objects. 
 
-%\section{Testing}
-%\label{sec:testing}
+The most important conclusions drawn from the obtained results are related to the difficulties in the analysis of the acquired depth data, especially in the field of object recognition. As it is a wide, open and relatively new research area, it requires a significant amount of time to explore and implement the currently applied solutions. Furthermore, each of the processing steps possess a vast array of different methodologies, most of which are governed by some manually adjusted parameters. In order to achieve the expected results, a lot of experience and a large number of parameter tuning trials is required.
 
-
-%---------------------------------------------------------------------------
-
-%\section{Conclusions}
-%\label{sec:conclusions}
-
-
-%---------------------------------------------------------------------------
-
-%\section{Future development}
-%\label{sec:future}
-
-
-
+Further development of the project has been approved for the next edition of the ABB Students Scientific Association programme. The established goals of the future work include the implementation of an autonomous system for gripping and transportation of objects between their destination points. The fulfilment of such task requires a a major improvement of the current object recognition system with the addition of a robust pose estimation of the target objects. Furthermore, in order to achieve the autonomous gripping, such system is planned to be integrated with the inverse kinematics algorithms and,  for the transportation purposes, some localisation mechanisms are going to be developed.
