--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,4 +1,6 @@
 
+
+
 @Book{Cyganek,
  author = {Boguslaw Cyganek and J. Paul Siebert.},
  title = {An Introduction to 3D Computer Vision Techniques and Algorithms},
@@ -13,10 +15,6 @@ title = {Time of Flight Cameras: Principles, Methods, and Applications},
 series = {SpringerBriefs in Computer Science},
 publisher = {Springer},
 year = 2013
-}
-
-@misc{extremetech,
-  howpublished = {\url{http://www.extremetech.com/}}
 }
 
 @Article{sensors,
@@ -58,17 +56,9 @@ keywords = "Computer vision "
   author={Borenstein, G.},
   isbn={9781449307073},
   lccn={2012360966},
-  series={Make: books},
   url={http://books.google.pl/books?id=G8Ua-YTU4CoC},
   year={2012},
   publisher={O'Reilly Media, Incorporated}
-}
-
-
-@Manual{ARM06,
-title = {Ada Reference Manual {ISO}/{IEC} 8652:200y({E}) {E}d. 3},
-organization = {Ada Europe},
-year = {2006}
 }
 
 @article{AldomaMTWPZRGV12,
@@ -118,9 +108,6 @@ number = {SLOA190B}
   VOLUME={24},
   YEAR={1981}
 }
-@misc{ASUS,
-  howpublished = "http://www.asus.com/pl/Multimedia/Xtion\textunderscore PRO\textunderscore LIVE/specifications"
-}
 @TechReport{ransacdummies,
     author = {Zuliani, Marco},
     institution = {UCSB},
@@ -129,19 +116,18 @@ number = {SLOA190B}
     title = {{RANSAC for Dummies}},
     year = {2012}
 }
-@misc{ensenso,
-  howpublished = "http://www.ensenso.de/?portfolio=n10"
-}
-@misc{ransacwiki,
-  howpublished = "http://en.wikipedia.org/wiki/RANSAC"
-}
 
-@misc{icpwiki,
-  howpublished = "http://en.wikipedia.org/wiki/Iterative\textunderscore closest\textunderscore point"
+@article{aimm,
+author = {Hvilshøj, Mads and Bøgh, Simon and Skov Nielsen, Oluf and Madsen, Ole},
+title = {{Autonomous industrial mobile manipulation (AIMM): past, present and future}},
+journal = {Industrial Robot: An International Journal},
+volume = {39},
+number = {2},
+pages = {120-135},
+year = {2012},
 }
-
 @InProceedings{hipoveri,
-	title = {CAD-Model Recognition and 6 DOF Pose Estimation},
+	title = {{CAD-Model Recognition and 6 DOF Pose Estimation}},
 	booktitle = {ICCV 2011, 3D Representation and Recognition (3dRR11)},
 	year = {2011},
 	month = {11/2011},
@@ -169,7 +155,7 @@ year = "2012"
 }
 
 @InProceedings{rusufpfg,
-	title = {Fast Point Feature Histograms (FPFH) for 3D Registration},
+	title = {{Fast Point Feature Histograms (FPFH) for 3D Registration}},
 	booktitle = {The IEEE International Conference on Robotics and Automation (ICRA)},
 	year = {2009},
 	month = {05/2009},
@@ -187,10 +173,71 @@ year = "2012"
 }
 
 
-@manual{Alvis2011,
-	organization = {AGH University of Science and Technology},
-	year = {2011},
-	title = {{On Line Alvis Manual}},
-	note = {\\\texttt{http://fm.ia.agh.edu.pl/alvis:manual}},
-	author = {Szpyrka, M.}
+@misc{extremetech,
+  howpublished = {\url{http://www.extremetech.com/}}
+}
+
+@misc{wikipedia,
+  howpublished = {\url{http://en.wikipedia.org/}}
+}
+
+@misc{pololu,
+  howpublished = {\url{https://www.pololu.com/product/1444}}
+}
+
+@misc{turnigy,
+  howpublished = {\url{http://www.hobbyking.com/}}
+}
+
+@misc{rover5,
+  howpublished = {\url{https://www.sparkfun.com/products/11593}}
+}
+
+@misc{pca9685,
+  howpublished = {\url{http://www.nxp.com/}}
+}
+
+@misc{nvidia,
+  howpublished = {\url{https://developer.nvidia.com/}}
+}
+
+@misc{webiopi,
+  howpublished = {\url{https://code.google.com/p/webiopi/}}
+}
+
+
+@misc{ensenso,
+  howpublished = {\url{http://www.ensenso.de/}}
+}
+
+
+@misc{nistereo,
+  howpublished = {\url{http://www.ni.com/}}
+}
+
+@misc{ASUS,
+  howpublished = {\url{http://www.asus.com/}}
+}
+
+@misc{prspecs,
+  howpublished = {\url{https://www.willowgarage.com/}}
+}
+
+@misc{amazonchallenge,
+  howpublished = {\url{http://amazonpickingchallenge.org/}}
+}
+@misc{pcl,
+  howpublished = {\url{http://pointclouds.org/}}
+}
+
+@misc{openmp,
+  howpublished = {\url{http://openmp.org/wp/}}
+}
+
+@misc{flann,
+  howpublished = {\url{http://www.cs.ubc.ca/research/flann/}}
+}
+
+@misc{netlib,
+  howpublished = {\url{http://cpp-netlib.org/}}
 }
