--- a/praca.tex
+++ b/praca.tex
@@ -72,7 +72,7 @@
 %\faculty{Wydział Elektrotechniki, Automatyki,\protect\\[-1mm] Informatyki i Inżynierii Biomedycznej}
 \faculty{Faculty of Electrical Engineering, Automatics, Computer Science and Biomedical Engineering}
 
-\acknowledgements{Serdecznie dziękuję \dots tu ciąg dalszych podziękowań np. dla promotora, żony, sąsiada itp.}
+\acknowledgements{I wish to thank to the Supervisor of this thesis for help and to the ABB Corporate Research Centre for support in the development of this project }
 
 
 \setlength{\cftsecnumwidth}{10mm}
