--- a/1intro.tex
+++ b/1intro.tex
@@ -8,9 +8,8 @@
 
 The aim of this work is to design and implement a mobile manipulation robotic platform with a vision system for obstacle detection and object recognition with a three dimensional camera. This work is a part of a project named "Mobile set of manipulators on a wheeled chassis". The project was realized in a three person team, as part of the Second Edition of ABB Students Scientific Association programme organized by ABB Corporate Research Center in Cracow.
 
-	In the first chapter, a design of the robotic system is presented. General concept of mobile manipulation is described and possible application areas are mentioned. Subsequently, design requirements, selected hardware components, and implemented software architecture is described. The second chapter provides information about modern depth map acquisition techniques, including stereo, time-of-flight and structured light cameras. For each method, its operation principle basics and general advantages and disadvantages are provided. The third section is focused on modern methods of depth image analysis. Concepts of point clouds and point descriptors are introduced. Moreover, general object-recognition pipeline is provided.
+	In the first chapter, a design of the robotic system is presented. General concept of mobile manipulation is outlined with possible application areas. Subsequently, the design requirements, selected hardware components, and implemented software architecture is described. The second chapter provides a survey modern depth map acquisition techniques, including stereo, time-of-flight and structured light cameras, followed by the selection of a depth sensor. For each method, its operation principle basics and general advantages and disadvantages are provided. The third chapter is focused on modern methods of depth image analysis. An introduction to basic point cloud processing methods is provided, followed by a processing tool set for model fitting and object recognition. The final section presents an implementation of a autonomous robot operation mode, based on the 3D image analysis.
 	
-	The final section presents an implementation of selected object recognition method. Test results in the real environment are provided. Possible future improvements to the algorithm are also mentioned.
 	
 \begin{comment}
 
